--- a/collections/osu_InternetARt/exercises/index.html
+++ b/collections/osu_InternetARt/exercises/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../../navbar.css">
     <link rel="stylesheet" href="../../../text.css">
+    <link rel="stylesheet" href="../../../navbar.css">
     <style>
   .box{
               display:flex;
@@ -67,7 +67,7 @@
 </p>
 <br>
 <p>
-    <a href="phaserv1/mimeprotoype.html" ><b>Mime Prototype</b>
+    <a href="mime/protoype.html" ><b>Mime Prototype</b>
     <p style="font-size: 25px;">Sydney Kit and her Partner, Tom, had an idea to create a game about a schizophrenic mime who uses invsibile weapons...two years ago.
     Mime Prototype is an exercise intended to get the converstaion rekindled between Sydney and Tom about their mime game. Although the prototype is not the style of 
   game the final product will be, it is an introduction to another game engine that could potentially be used. <br>The artwork and prototype was all completed by Sydney Kit...so Tom needs to quit focusing on 
