--- a/collections/osu_InternetARt/home.html
+++ b/collections/osu_InternetARt/home.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>OSU Art3001</title>
-    <link rel="stylesheet" href="../../navbar.css">
     <link rel="stylesheet" href="../../text.css">
+    <link rel="stylesheet" href="../../navbar.css">
     <style>
         * {
             text-align: center
@@ -86,7 +86,8 @@
     <br>
 <br>
 This entire website (SydneyKit.com) was created during this class.</p>
-
+<br>
+<p><a href="exercises/mime/protoype.html">Mime Game</a></p>
     <br>
     <p>
         <meta name="viewport" content="width=device-width, initial-scale=1">
