--- a/loveme/access.html
+++ b/loveme/access.html
@@ -4,8 +4,8 @@
 <title>Webcomics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="../navbar.css">
 <link rel="stylesheet" href="../text.css">
+<link rel="stylesheet" href="../navbar.css">>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="accesscode.js"></script>
 
