--- a/loveme/loveme2.html
+++ b/loveme/loveme2.html
@@ -4,8 +4,8 @@
 <title>Webcomics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="../navbar.css">
 <link rel="stylesheet" href="../text.css">
+<link rel="stylesheet" href="../navbar.css">
 
 <body style="font-size: 30px; text-align: center;">
     <div class="navbar">
@@ -15,7 +15,10 @@
        <a href="../Collections/index.html" style="font-size: 40px;">Collections</a> 
        <a href="../contact.html" style="font-size: 40px;">Contact</a>
       </div>
+      <br>
+      <br>
 <p>Digital Access to Love, Me Volume 2</p>
+<p>Coming soon!</p>
 
 <br>
 <br>
