--- a/collections/osu_InternetARt/exercises/resume.html
+++ b/collections/osu_InternetARt/exercises/resume.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <div class="section">
     
        <div class="navbar">
-    <a href="../../../index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
+    <a href="../../../index.html"><img src="../../../img/SK_logo2.png" width="81" height="45.6"> </a> 
     <a href="../../../about.html" style="font-size: 40px;">About</a> 
     <a href="../../../portfolio.html" style="font-size: 40px;">Portfolio</a>
    <a href="../../../collections/index.html" style="font-size: 40px;">Collections</a> 
