--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="navbar.css">
   <title>Shop</title>
   <style>
     .box{
@@ -66,7 +66,7 @@
   <p style="font-size: 50px;">Prints</p>
   <div class="box">
       <img src="img/Love,Me_cover.png" style="width: 25%;">
-      <p><i>Love, Me</i> (Comic book)<br><br> $5 plus shipping</p>
+      <p><i>Love, Me</i> (Comic book)<br><br> $5 plus shipping <br> Starting May 1st the price is $7</p>
   </div>
   <br>
   <div class="box">
