Breakpoint CSS start, gallery finish
added more to gallery- should be current
started b reakpoint css

--- a/collections/index.html
+++ b/collections/index.html
@@ -47,7 +47,7 @@
   <header style="font-size: 60px; text-align: center;">Collections</header>
  <br>
  <div style="font-size: 35px;">
-<p style="font-size: 50px; margin-left: 200px;">Independant Art</p>  
+<p style="font-size: 50px; margin-left: 200px;">Independent Art</p>  
 <div class="box";>
     <a href="Independant_ALaneyDay.html"><p style="text-align: right";>A Laney Day</p><video autoplay muted loop src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img></a>
     <a href="Independant_PlanBeeFarm.html"><p>Plan Bee Farm Logo</p><img src="files/OBC_animatedlogo.gif" style= "height: 180px; width: 320px;"></img></a>
