--- a/collections/osu_InternetARt/exercises/resume.html
+++ b/collections/osu_InternetARt/exercises/resume.html
@@ -55,12 +55,13 @@
     </div>
     <div class="section">
         <div class="p fixed">
-      <h3>Exhibition Works</h3>
+      <h3><a href="../../../portfolio.html#anchor2">Exhibition Works</a></h3>
         <br>
-        <p><i>A Laney Day</i> was featured in the "Can You See My Screen" Exhibition December 2020-April 2021<br><i>Hockey Still Life</i> was featued in the APX Student Collective April 2019.<br>
-            <i>La Passion/Le Brassier (Statue)</i>was featured in "Can You See My Screen" Exhibition December 2020-April 2021<br>  <i>Replication Sunflowers</i> was featued in the APX Student Collective April 2019.<br> 
-            <i>How Much Did I Sleep Last Night</i> was featured in the "Can You See My Screen" Exhibition December 2020-April 2021<br><i>Our Biggest Dream</i> was featured in the Hopkins Gallery April 2019-December 2019.
-      </p>
+        <p><a href="../../Independant_ALaneyDay.html"><i>A Laney Day</i></a> December 2020-current<br><a href="../../osu_Painting.html"><i>Hockey Still Life</i></a> April 2019<br><a href="sydneykit.com">SydneyKit.com homepage</a> April 2021-current<br> 
+            <a href="../../osu_3DAnimation.html"><i>How Much Did I Sleep Last Night</i></a> December 2020-current<br><a href="../../osu_3DModeling.html"><i>La Passion/Le Brassier (Statue)</i></a> December 2020-current<br><a href="../../osu_MovingImage.html"><i>Our Biggest Dream</i></a> April 2019-December 2019.
+            <a href="mime/protoype.html"><i>Mime Prototype Game</i></a> April 2021-current<br><a href="../../osu_Painting.html"><i>Replication Sunflowers</i></a> April 2019<br><a href="../../osu_3DModeling.html"><i>To Be Remembered</i></a> December 2020-current & April 2021<br> 
+            <a href="../../osu_Drawing.html"><i>Wood Detail</i></a> April 2021<br> 
+          </p>
   </div>
     </div>
     <div class="section">
