--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,15 @@
   <p>Gallery of highlighted work here</p>
   <br id="anchor2">
   <p style="font-size: 50px;">Gallery Shows</p>
+  <p style="font-size: 35px;"><a href="https://u.osu.edu/canyouseemyscreen/">"Radicant Bodies" Online Gallery</a></p>
+  <p style="font-size: 20px;">April 23, 2020-Current</p>
+  <a href="https://u.osu.edu/radicantbodies"><img src="img/Love,Me_pg11.png" width="25%"><br></a>
+  <a href="https://u.osu.edu/radicantbodies/"><video muted autoplay loop src="img/mimegame.mp4" width="35%"></video><br><img src="img/homescreen.JPG" width="40%"></a>
+  <p>Three works, A page from the <i>Love, Me</i> comic book, <i>Mime Game Prototype</i>, and my webstie's homepage, were featured in The Ohio State Universiry Art & Technology's online gallery show 
+    "Radicant Bodies" starting April 23, 2021.</p>
+  <br>
+  <p>Visit Each Page: <span style="padding: 10px 20px;"><a href="loveme/Independent_LoveMe.html"><i>Love, Me</i></a></span><span style="padding: 10px 40px;"><a href="collections/osu_InternetARt/exercises/mime/protoype.html">Play the <i>Mime Game Prototype</i></a></span><a href="index.html">SydneyKit.com homepage</a></p>
+  <hr>
   <p style="font-size: 35px;"><a href="https://www.instagram.com/buckeyecreativeconnection/">Columbus Spring Art Fest hosted by Buckeye Creative Connection</a></p>
   <p style="font-size: 20px;">April 18, 2021</p>
   <img src="img/IMG_1444.PNG" width="65%">
@@ -48,10 +57,11 @@
  <br>
  <p>Visit The Page: <span style="padding: 25px 0px;"><a href="loveme/Independent_LoveMe.html"><i>Love, Me</i></a></span>
  <hr>
-  <p style="font-size: 35px;"><a href="https://u.osu.edu/canyouseemyscreen/">Can You See My Screen? Online Gallery</a></p>
-  <p style="font-size: 20px;">December 2020-Current</p>
-  <a href="https://u.osu.edu/canyouseemyscreen/3d-modeling-hirad-sab/"><img src="img/ringsonline.JPG" width="45%"><img src="img/ringsonline2.JPG" width="45%"><br></a>
-  <a href="https://u.osu.edu/canyouseemyscreen/computer-animation-tran-sab/"><img src="img/laneydayonline.JPG" width="55%"><br><img src="img/HMDISLNonline.JPG" width="40%"></a>
+  <p style="font-size: 35px;"><a href="https://u.osu.edu/canyouseemyscreen/">"Can You See My Screen?" Online Gallery</a></p>
+  <p style="font-size: 20px;">December 4, 2020-Current</p>
+  <a href="https://u.osu.edu/canyouseemyscreen/3d-modeling-hirad-sab/"><img src="collections/files/3DM_borthrings_frontview.jpg" width="40%"><img src="collections/files/3DM_borthrings_sideview.jpg" width="40%"><br>
+  <img src="collections/files/la passion_le brassier (statue) front view.jpg" width="40%"><br></a>
+  <a href="https://u.osu.edu/canyouseemyscreen/computer-animation-tran-sab/"><img src="img/laneydayonline.JPG" width="40%"><img src="img/HMDISLNonline.JPG" width="40%"></a>
   <p>Three works, the then named <i>Both Rings</i>, now named <i>To Be Remembered</i>, <i>A Laney Day</i> and <i>How Much Did I Sleep Last Night?</i>, were featured in The Ohio State Universiry Art & Technology's online gallery show 
     "Can You See My Screen?" starting December 2020.</p>
   <p><i>A Laney Day</i> is the first video shown on the "Animation- Tran & Sab" page.</p>
