--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,8 @@
     </style>
 </head>
 
-<body style="text-align: center; font-size: 30px;">
+<body style="text-align: center;">
+  <div class="navbartext">
   <div class="navbar">
   <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
   <a href="about.html" style="font-size: 40px;">About</a> 
@@ -41,6 +42,7 @@
  <a href="collections/index.html" style="font-size: 40px;">Collections</a> 
  <a href="shop.html" style="font-size: 40px;">Shop</a>
  <a href="contact.html" style="font-size: 40px;">Contact</a>
+</div>
 </div>
 <br>
   <p style="font-size: 75px; text-align: center;"><b>Shop</b></p>
