start of breakpoints
break points figured out and started

--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
 
 <body>
 <div class="section">
-  <div class="bar"></div>
   <div class="navbar">
-    <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
-    <a href="about.html" style="font-size: 40px;">About</a> 
-    <a href="portfolio.html" style="font-size: 40px;">Portfolio</a>
-   <a href="collections/index.html" style="font-size: 40px;">Collections</a> 
-   <a href="shop.html" style="font-size: 40px;">Shop</a>
-   <a href="contact.html" style="font-size: 40px;">Contact</a>
+    <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+    <a href="about.html">About</a> 
+    <a href="portfolio.html">Portfolio</a>
+   <a href="collections/index.html">Collections</a> 
+   <a href="shop.html">Shop</a>
+   <a href="contact.html">Contact</a>
   </div>
   <div class="fixed">
-   <p style="font-size: 100px; margin-bottom: 5px;">Sydney Kit</p>
+    <br>
+   <div class="titletext" style="margin-bottom: 5px;">Sydney Kit</div>
    <img src="img/SydneyKitprofilepic.jpg" style="width: 80%;">
-   <p style="font-size: 35px;">Animator, Content Creator, Digital Artist</p>
+   <div class="headertext">Animator, Content Creator, Digital Artist
+  </div>
   </div>
 </div>
 
 <div class="section">
   <div class="p fixed">
-    <h1>Latest News</h1>
-    <p style="font-size: 30px;"> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/Independent_LoveMe.html"><i>Love, Me</i> page</a> for more information.</p>
-    <p style="font-size: 30px;">Check out Sydney Kit's work at the Columbus Spring Art Fest at <a href="https://www.google.com/maps/place/400+West+Rich,+Franklinton/@39.9563689,-83.013027,17z/data=!3m2!4b1!5s0x88388f3f1619d18b:0x37d971def1d0990d!4m5!3m4!1s0x88388f3f40f75c01:0x464bebebebf5fb01!8m2!3d39.9563689!4d-83.0108383">400 W Rich St</a>, Sunday, April 18th from 12-6pm!</p>
+    <div class="headertext">Latest News</div>
+    <div class="text">
+    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/Independent_LoveMe.html"><i>Love, Me</i> page</a> for more information.</p>
+    <p>Check out Sydney Kit's work in the April Gallery Shows! <a href="portfolio.html/#anchor2">See the images from the Columbus Spring Art Fest and the online show "Radicant Bodies"</a>!</p>
+</div>
 </div>
 </div>
 <div class="section">
@@ -53,7 +56,7 @@
 </div>
 <div class="section">
   <div class="p fixed">
-    <h1><a href="shop.html">Shop</a></h1>
+    <h1><a href="shop.html" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></h1>
     <p>Originals and Copies for Sale</p>
     </div>
 </div>
