--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 
-<body style="text-align: center;">
+<body style="text-align: center; font-size: 30px;">
   <div class="navbartext">
   <div class="navbar">
   <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
