--- a/about.html
+++ b/about.html
@@ -8,24 +8,26 @@
   <title>About</title>
 </head>
 
-<body style="font-size: 30px; text-align: center;">
+<body style="text-align: center; margin: 0px;">
   <div class="navbar">
-  <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="about.html" style="font-size: 40px;">About</a> 
-  <a href="portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="shop.html" style="font-size: 40px;">Shop</a>
- <a href="contact.html" style="font-size: 40px;">Contact</a>
+  <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+  <a href="about.html">About</a> 
+  <a href="portfolio.html">Portfolio</a>
+ <a href="collections/index.html">Collections</a> 
+ <a href="shop.html">Shop</a>
+ <a href="contact.html">Contact</a>
 </div>
 <br>
 <br>
+<br>
+<br>
 <div style="margin-left: 10%; margin-right: 10%; ">
-  <p style="font-size: 75px; text-align: center; margin-bottom: 0px;"><b>Sydney Kit</b></p>
+  <p style="margin-bottom: 0px;" class="titletext"><b>Sydney Kit</b></p>
   <br>
-  <div style="text-align: center;"><img src="img/profile pic.jpeg" width="60%"></div>
+  <div><img src="img/profile pic.jpeg" width="60%"></div>
   <br>
-  <p style="font-size: 50px; text-align: center;">Artist Statement</p>
-  <p>After finding a passion for art her senior year of high school, Sydney Kit became a digital artist, specializing in animations. Her work is inspired by the experimentation of new
+  <p class="headertext">Artist Statement</p>
+  <p class="text">After finding a passion for art her senior year of high school, Sydney Kit became a digital artist, specializing in animations. Her work is inspired by the experimentation of new
     mediums along with the people that surround her. Sydney Kit is the creator of the animated series "A Laney Day" and the comic series "Love, Me".
   </p>
   <br>
@@ -33,8 +35,8 @@
   <br>
   <img src="Collections/files/animals&portraits_sy.jpg" style="width: 60%;">
   <br>
-  <p style="font-size: 50px; text-align: center;">Biography</p>
-  <p> Sydney Kit is a current undergrad student studying Art and Technology with a specialization in animation at The Ohio State University. 
+  <p class="headertext">Biography</p>
+  <p class="text"> Sydney Kit is a current undergrad student studying Art and Technology with a specialization in animation at The Ohio State University. 
     From an early age, she wanted to enter the medical field, just like most of her family. However, in her senior year of high school the counselor had told her that she was required to take an art class. 
    <br><br> After several emails trying to convince the counselor to let her take a seventh science class instead, Sydney Kit was signed up for the art class. She found herself 
     in a situation where she was taking two art classes: a weekly news video class and a traditional art class. Throughout that year, she painted, drew, did an oil pastel drawing, and came up with a new video every week for the school to watch. Sydney Kit enjoyed the art 
