--- a/collections/index.html
+++ b/collections/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Collections</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../text.css">
         <link rel="stylesheet" href="../navbar.css">
         <style>
@@ -16,38 +17,23 @@
         .box > div {
             padding: 100px;
         }
-        .specialbox{
-            display: flex;
-            flex-direction: row;
-            justify-content: left;
-            margin-left: 390px;
-        }
-        .center{
-            display:block;
-           margin-left: auto;
-           margin-right: auto;
-           width: 60%;
-        }
         </style>
     </head>
-<body>
+<body style="margin: 0px;">
   <div class="navbar">
-    <a href="../index.html"><img src="files/SK_logo2.png" width="81" height="45.6"> </a> 
-    <a href="../about.html" style="font-size: 40px;">About</a> 
-    <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
-   <a href="../collections/index.html" style="font-size: 40px;">Collections</a> 
-   <a href="../shop.html" style="font-size: 40px;">Shop</a>
-   <a href="../contact.html" style="font-size: 40px;">Contact</a>
+    <a href="../index.html"><img src="../img/SK_logo2.png" width="100%"> </a> 
+    <a href="../about.html">About</a> 
+    <a href="../portfolio.html">Portfolio</a>
+   <a href="../collections/index.html">Collections</a> 
+   <a href="../shop.html">Shop</a>
+   <a href="../contact.html">Contact</a>
   </div>
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <header style="font-size: 60px; text-align: center;">Collections</header>
- <br>
- <div style="font-size: 35px;">
-<p style="font-size: 50px; margin-left: 200px;">Independent Art</p>  
+  <p class="titletext" style="text-align: center;">Collections</p>
+ <div class="text">
+<p style="margin-left: 15%;" class="headertext">Independent Art</p>  
 <div class="box";>
     <a href="Independant_ALaneyDay.html"><p style="text-align: right";>A Laney Day</p><video autoplay muted loop src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img></a>
     <a href="Independant_PlanBeeFarm.html"><p>Plan Bee Farm Logo</p><img src="files/OBC_animatedlogo.gif" style= "height: 180px; width: 320px;"></img></a>
@@ -57,22 +43,19 @@
     <a href="../loveme/Independent_LoveMe.html"><p>Love, Me</p><img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
   </div>
   <div class="box";>
-    <a href="Independant_Nature&Shapes.html"><p>Nature&Shapes</p><img src="files/nature&shapes_caroline1.jpg" style= "height: 180px; width: 320px;"></img></a>
-    <a href="Independant_Service2Facilities.html"><p style="text-align: center";>Service2Facilities</p><video src="files/Student Attendance SRIT updated.mp4" style= "height: 180px; width: 320px";></video></a>
+    <a href="Independant_Nature&Shapes.html"><p style="text-align: right;">Nature&Shapes</p><img src="files/nature&shapes_caroline1.jpg" style= "height: 180px; width: 320px;"></img></a>
+    <a href="Independant_Service2Facilities.html"><p>Service2Facilities</p><video src="files/Student Attendance SRIT updated.mp4" style= "height: 180px; width: 320px";></video></a>
   </div>
 <br>
   <br>
-  <p style="font-size: 50px; margin-left: 200px;">Internships</p>  
+  <p style="margin-left: 15%;" class="headertext">Internships</p>  
   <div class="box";>
-    <a href="Internships_Anoarch.html"><p style="text-align: right";>Anoarch</p><img src="files/" style= "height: 180px; width: 320px";></img></a>
-    <a href="Internship_AustinVisuals.html"><p>Austin Visuals</p><video autoplay muted loop src="files/NB Final Demo Version 2.mp4" style= "height: 180px; width: 320px;"></video></a>
-  </div>
-  <div class="box";>
-    <a href="Internship_Tutel.html"><p style="text-align: center;">Tutel</p><video autoplay muted loop src="files/Tutle version 3.3.mp4" style= "height: 180px; width: 320px";></video></a>
+    <a href="Internship_AustinVisuals.html"><p style="text-align: right;">Austin Visuals</p><video autoplay muted loop src="files/NB Final Demo Version 2.mp4" style= "height: 180px; width: 320px;"></video></a>
+    <a href="Internship_Tutel.html"><p>Tutel</p><video autoplay muted loop src="files/Tutle version 3.3.mp4" style= "height: 180px; width: 320px";></video></a>
   </div>
 <br>
   <br>
-    <p style="font-size: 50px; margin-left: 200px";> Undergraduate </p>
+    <p style="margin-left: 15%;" class="headertext"> Undergraduate </p>
   <div class="box";>
     <a href="osu_2DArt.html"><p style="text-align: right";>2D Art</p><img src="files/2018-08-14 044.JPG" style= "height: 180px; width: 320px";></img></a>
     <a href="osu_3DAnimation.html"><p>3D Animation</p><video autoplay muted loop src="files/Laney Day_lowMB.mp4" style= "height: 180px; width: 320px;"></video></a>
@@ -108,5 +91,11 @@
   
   </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
