--- a/contact.html
+++ b/contact.html
@@ -22,22 +22,23 @@
 
 <body>
   <div class="navbar">
-  <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="about.html" style="font-size: 40px;">About</a> 
-  <a href="portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="shop.html" style="font-size: 40px;">Shop</a> 
- <a href="contact.html" style="font-size: 40px;">Contact</a>
+  <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+  <a href="about.html">About</a> 
+  <a href="portfolio.html">Portfolio</a>
+ <a href="collections/index.html">Collections</a> 
+ <a href="shop.html">Shop</a> 
+ <a href="contact.html">Contact</a>
 </div>
  <br>
  <br>
  <br>
  <br>
- <p style="font-size: 100px; text-align: center;"><b>Contact</b></p>
-  <p style="font-size: 40px; text-align: center;">Email: <a id="under" href="mailto:kit.frank.art@gmail.com">kit.frank.art@gmail.com</a></p>
-  <p style="font-size: 40px; text-align: center;">Instagram: <a id="under" href="https://www.instagram.com/sydney.kit.anim/">@sydney.kit.anim</a></p>
-  <p style="font-size: 40px; text-align: center;">LinkedIn: <a id="under" href="https://www.linkedin.com/in/sydney-frank-b2b984148/">Sydney Frank</a></p>
-
+ <div style="text-align: center;">
+ <p class="titletext"><b>Contact</b></p>
+  <p class="headertext">Email: <a id="under" href="mailto:kit.frank.art@gmail.com">kit.frank.art@gmail.com</a></p>
+  <p class="headertext">Instagram: <a id="under" href="https://www.instagram.com/sydney.kit.anim/">@sydney.kit.anim</a></p>
+  <p class="headertext">LinkedIn: <a id="under" href="https://www.linkedin.com/in/sydney-frank-b2b984148/">Sydney Frank</a></p>
+</div>
   
 </body>
 </html>
