--- a/shop.html
+++ b/shop.html
@@ -30,78 +30,79 @@
        margin-right: auto;
        width: 60%;
     }
+    
     </style>
 </head>
 
-<body style="text-align: center; font-size: 30px;">
-  <div class="navbartext">
+<body style="text-align: center; margin: 0px;">
   <div class="navbar">
-  <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
-  <a href="about.html" style="font-size: 40px;">About</a> 
-  <a href="portfolio.html" style="font-size: 40px;">Portfolio</a>
- <a href="collections/index.html" style="font-size: 40px;">Collections</a> 
- <a href="shop.html" style="font-size: 40px;">Shop</a>
- <a href="contact.html" style="font-size: 40px;">Contact</a>
-</div>
+  <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
+  <a href="about.html">About</a> 
+  <a href="portfolio.html">Portfolio</a>
+ <a href="collections/index.html">Collections</a> 
+ <a href="shop.html">Shop</a>
+ <a href="contact.html">Contact</a>
 </div>
 <br>
-  <p style="font-size: 75px; text-align: center;"><b>Shop</b></p>
-   <p style="font-size: 50px;">
+<br>
+  <p class="titletext" style="margin-bottom: 0px;"><b>Shop</b></p>
+   <p class="headertext">
         <span style="padding: 0px 20px;"><a href="#anchor1">New Items</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor2"> Originals</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor3"> Prints</a></span>
         <span style="padding: 0px 20px;"> <a href="#anchor4"> Comissions</a></span>
     </p>  
-    <div style="text-align: center;"><img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%"></div>
+  <img src="img/SydneyKitprofilepic.jpg" width="40%">
   <br id="anchor1">
   <br>
   <br>
-  <p style="font-size: 50px;">New Items</p>
+  <p class="headertext">New Items</p>
   <img src="loveme/comicbook5.jpg" style="width: 25%;">
   <br>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdld9VEDCYq7imM7djJuWG6HJQAlc8GGIsyAp4s_L5vwv8vZQ/viewform?embedded=true" width="600" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+  <div class="form">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdld9VEDCYq7imM7djJuWG6HJQAlc8GGIsyAp4s_L5vwv8vZQ/viewform?embedded=true" width="300px" height="600px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
   <br id="anchor2"><br><br>
-  <p style="font-size: 50px;"> Originals</p>
-<p>Coming Soon!</p>
+  <p class="headertext"> Originals</p>
+<p class="text">Coming Soon!</p>
   <br id="anchor3"><br><br>
-  <p style="font-size: 50px;">Prints</p>
+  <p class="headertext">Prints</p>
   <div class="box">
       <img src="img/Love,Me_cover.png" style="width: 25%;">
-      <p><i>Love, Me</i> (Comic book)<br><br> $5 plus shipping <br> Starting May 1st the price is $7</p>
+      <p class="text"><i>Love, Me</i> (Comic book)<br><br> $5 plus shipping <br> Starting May 1st the price is $7</p>
   </div>
   <br>
   <div class="box">
-      <p><i>Nature&Shapes</i> Collection<br><br> $5 each plus shipping <br><br> All pieces are available. <a href="collections/Independant_Nature&Shapes.html">See More Here.</a></p>
+      <p class="text"><i>Nature&Shapes</i> Collection<br><br> $5 each plus shipping <br><br> All pieces are available. <a href="collections/Independant_Nature&Shapes.html">See More Here.</a></p>
       <img src="img/nature&shapes_chris.jpg" style="width: 25%;">
 </div>
 
   <br id="anchor4"><br><br>
-  <p style="font-size: 50px;">Comissions</p>
+  <p class="headertext">Comissions</p>
   <div class="box">
-  <img src="img/nature&shapes_je.jpg" style="width: 25%;"><p>Customizable <i>Nature&Shapes</i> Piece <br><br>$10<br><br> Digital Painting</p>
+  <img src="img/nature&shapes_je.jpg" style="width: 25%;"><p class="text">Customizable <i>Nature&Shapes</i> Piece <br><br>$10<br><br> Digital Painting</p>
 </div>
 <br>
 <br>
 <div class="box">
-    <p>Customizable <i>Portaits&Animals</i> Piece <br><br>$25<br><br> Digital Painting</p>
+    <p class="text">Customizable <i>Portaits&Animals</i> Piece <br><br>$25<br><br> Digital Painting</p>
     <img src="img/animals&portraits_to.jpg" style="width: 45%;">
   </div>
   <br>
   <br>
   <div class="box">
-    <img src="img/laney.png" style="width: 25%;"><p>Customizable Pet Piece <br><br>Starting at $20<br><br> Digital Painting</p>
+    <img src="img/laney.png" style="width: 25%;"><p class="text">Customizable Pet Piece <br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
   <br>
   <div class="box">
-    <p>Customizable Pet Piece <br><br>Starting at $50<br><br> Acrylic 8.5in x 11in Painting <br><br> Other sizes and styles available</p>
+    <p class="text">Customizable Pet Piece <br><br>Starting at $50<br><br> Acrylic 8.5in x 11in Painting <br><br> Other sizes and styles available</p>
     <img src="img/petpainting.jpg" style="width: 25%;">
   </div>
   <br>
   <br>
   <div class="box">
-    <img src="img/kavbasket.jpg" style="width: 45%;"><p>Portrait Piece <br><br>Starting at $20<br><br> Digital Painting</p>
+    <img src="img/kavbasket.jpg" style="width: 45%;"><p class="text">Portrait Piece <br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
   <br>
