shop & name changes
shop images fixed, now mobile friendly
all collections removed the type

--- a/collections/Nature&Shapes.html
+++ b/collections/Nature&Shapes.html
@@ -117,7 +117,7 @@
 <br>
 <br>
 <p style="font-size: 50px; text-align: center;"><b>Want your own?</b></p>
-<p style="font-size: 30px; text-align: center;">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! It's free.</p>
+<p style="font-size: 30px; text-align: center;">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! Price is $10 each.</p>
 <br>
 
 </body>
