--- a/shop.html
+++ b/shop.html
@@ -11,26 +11,13 @@
         display:flex;
         flex-direction: row;
         justify-content: center;
-        justify-content: space-evenly;
+        align-items: center;
         margin-left: 25%;
         margin-right: 25%;
     }
     .box > div {
-        padding: 100px;
+        padding: 5%;
     }
-    .specialbox{
-        display: flex;
-        flex-direction: row;
-        justify-content: left;
-        margin-left: 390px;
-    }
-    .center{
-        display:block;
-       margin-left: auto;
-       margin-right: auto;
-       width: 60%;
-    }
-    
     </style>
 </head>
 
@@ -45,6 +32,7 @@
 </div>
 <br>
 <br>
+<br>
   <p class="titletext" style="margin-bottom: 0px;"><b>Shop</b></p>
    <p class="headertext">
         <span style="padding: 0px 20px;"><a href="#anchor1">New Items</a></span>
@@ -52,57 +40,78 @@
         <span style="padding: 0px 20px;"><a href="#anchor3"> Prints</a></span>
         <span style="padding: 0px 20px;"> <a href="#anchor4"> Comissions</a></span>
     </p>  
-  <img src="img/SydneyKitprofilepic.jpg" width="40%">
+  <img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%">
   <br id="anchor1">
   <br>
   <br>
   <p class="headertext">New Items</p>
-  <img src="loveme/comicbook5.jpg" style="width: 25%;">
-  <br>
-  <div class="form">
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdld9VEDCYq7imM7djJuWG6HJQAlc8GGIsyAp4s_L5vwv8vZQ/viewform?embedded=true" width="300px" height="600px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <div class="box">
+  <img src="loveme/comicbook5.jpg" style="width: 30%; height: 30%;">
+  <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Volume 1 Order&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
+<i>Love, Me</i> Volume 1</a><br><br>$7 each <br> $6 for US shipping</p>
 </div>
+  <br>
   <br id="anchor2"><br><br>
   <p class="headertext"> Originals</p>
-<p class="text">Coming Soon!</p>
+<div class="box">
+<img src="img/both rings.jpg" width="40%" height="40%">
+<p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=To Be Remembered Offer&body=Hello, I would like to purchase the limited print, audience award winning To Be Remembered for $250.">
+<i>To Be Remembered</i></a><br><br>Limited Print<br>Winner of the Columbus Spring Art Fest Audience Award<br>Featured at the 400 W Rich Gallery<br><br>$250 with frame or best offer.
+</div>
+<div class="box">
+  <p class="text">
+<a href="mailto:kit.frank.art@gmail.com?subject=Drawing Piece Offer&body=Hello, I would like to see if (piece) is available for purchase.">
+  Various Drawing Pieces</a><br><br>Pieces from the <a href="collections/Drawing.html">Undergraduate Drawing</a> class are available<br><br>$100 for black and white, $150 for color<br><br><i>Wood Detail</i> is not included.</p>
+<img src="collections/files/2018-08-14 020.JPG" style="width: 40%; height: 40%;">
+</div>
   <br id="anchor3"><br><br>
   <p class="headertext">Prints</p>
   <div class="box">
-      <img src="img/Love,Me_cover.png" style="width: 25%;">
-      <p class="text"><i>Love, Me</i> (Comic book)<br><br> $5 plus shipping <br> Starting May 1st the price is $7</p>
+      <img src="img/Love,Me_cover.png" style="width: 25%; height: 25%;">
+      <p class="text" style="margin-left: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Volume 1 Order&body=Hello, I would like (number) copy/copies of the Love, Me Volume 1. I would like to (pick up at -)(ship it to -).">
+      <i>Love, Me</i> Volume 1<br>Comic book</a><br><br> $7 each <br> $6 for US shipping </p>
   </div>
   <br>
   <div class="box">
-      <p class="text"><i>Nature&Shapes</i> Collection<br><br> $5 each plus shipping <br><br> All pieces are available. <a href="collections/Independant_Nature&Shapes.html">See More Here.</a></p>
-      <img src="img/nature&shapes_chris.jpg" style="width: 25%;">
+      <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Nature And Shapes Print Order&body=Hello, I would like (number) print(s) of the Nature And Shapes collection titled (title).">
+        <i>Nature&Shapes</i> Collection</a><br><br> $5 each <br> $3 for US shipping<br> All pieces are available. <a href="collections/Independant_Nature&Shapes.html">See More Here.</a></p>
+      <img src="img/nature&shapes_chris.jpg" style="width: 25%; height: 25%;">
 </div>
 
   <br id="anchor4"><br><br>
   <p class="headertext">Comissions</p>
   <div class="box">
-  <img src="img/nature&shapes_je.jpg" style="width: 25%;"><p class="text">Customizable <i>Nature&Shapes</i> Piece <br><br>$10<br><br> Digital Painting</p>
+  <img src="img/nature&shapes_je.jpg" style="width: 25%; height: 25%;">
+  <a href="mailto:kit.frank.art@gmail.com?subject=Nature And Shapes Commission&body=Hello, I would like a custom Nature And Shapes piece with (plant), (shape), and (color).">
+  <p class="text" style="margin-left: 5%;">Customizable <i>Nature&Shapes</i> Piece</a> <br><br>$10<br><br> Digital Painting</p>
 </div>
 <br>
 <br>
 <div class="box">
-    <p class="text">Customizable <i>Portaits&Animals</i> Piece <br><br>$25<br><br> Digital Painting</p>
-    <img src="img/animals&portraits_to.jpg" style="width: 45%;">
+    <p class="text" style="margin-right: 5%;"><a href="mailto:kit.frank.art@gmail.com?subject=Portraits And Animals Commission Order&body=Hello, I would like a custom Portrait And Animals piece with the attached image, (animal), and (color).">
+      Customizable <i>Portaits&Animals</i> Piece</a> <br><br>$25<br><br> Digital Painting</p>
+    <img src="img/animals&portraits_to.jpg" style="width: 45%; height: 45%;">
   </div>
   <br>
   <br>
   <div class="box">
-    <img src="img/laney.png" style="width: 25%;"><p class="text">Customizable Pet Piece <br><br>Starting at $20<br><br> Digital Painting</p>
+    <img src="img/laney.png" style="width: 25%; height: 25%;">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Pet Digital Painting Commission&body=Hello, I would like a custom digital painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
+    <p class="text" style="margin-left: 5%;">Customizable Pet Piece </a><br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
   <br>
   <div class="box">
-    <p class="text">Customizable Pet Piece <br><br>Starting at $50<br><br> Acrylic 8.5in x 11in Painting <br><br> Other sizes and styles available</p>
-    <img src="img/petpainting.jpg" style="width: 25%;">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Pet Acrylic Painting Commission&body=Hello, I would like a custom acrylic painting of my pet. The image of my pet is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, my backyard, etc.)">
+    <p class="text" style="margin-right: 5%;">Customizable Pet Piece </a><br><br>Starting at $50<br><br> Acrylic 8.5in x 11in Painting <br><br> Other sizes and styles available</p>
+    <img src="img/petpainting.jpg" style="width: 30%; height: 30%;">
   </div>
   <br>
   <br>
   <div class="box">
-    <img src="img/kavbasket.jpg" style="width: 45%;"><p class="text">Portrait Piece <br><br>Starting at $20<br><br> Digital Painting</p>
+    <img src="img/kavbasket.jpg" style="width: 45%; height: 45%">
+    <a href="mailto:kit.frank.art@gmail.com?subject=Portrait Digital Painting Commission&body=Hello, I would like a custom digital portrait. The image I would like painted is attached and I would like a (simple or complex) background. I would like the background to be (details of the background- ex red, gradient red to black, the same as the image, etc.)">
+    <p class="text" style="margin-left: 5%;">Portrait Piece </a><br><br>Starting at $20<br><br> Digital Painting</p>
   </div>
   <br>
   <br>
